Small fix for better readability

--- a/components/CookieConsentBanner/index.module.scss
+++ b/components/CookieConsentBanner/index.module.scss
@@ -45,6 +45,7 @@
                 border: 1px solid transparent;
                 border-radius: 10px;
                 color: #CBA3FF;
+                cursor: pointer;
             }
 
             .accept {
