--- a/components/Service/index.module.scss
+++ b/components/Service/index.module.scss
@@ -110,7 +110,6 @@
         }
 
         .description {
-            overflow: scroll;
             ul {
                 li {
                     font-size: 20px;
